# E-miT

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  feth.py  partitions.csv  sdkconfig  sdkconfig.old  start_ngrok.sh.example
components/SPI/: CMakeLists.txt  SPI.c
components/SPI/include/: SPI.h
components/api/: CMakeLists.txt  api.c
components/api/include/: api.h
components/client/: CMakeLists.txt  client.c  oauth2.c
components/client/include/: client.h  oauth2.h
components/env_var/: CMakeLists.txt  env_var.c
components/peripherals/: CMakeLists.txt  peripherals.c
components/peripherals/include/: peripherals.h
components/screen/: CMakeLists.txt  screen.c  screen.cpp
components/screen/include/: generic_icons.h  icons_128x128.h  resources.hpp  screen.h  screen.hpp  zeb.h
components/screen/include/128x128/: 00_128x128.h  01_128x128.h  02_128x128.h  03_128x128.h  100_128x128.h  45_128x128.h  48_128x128.h  51_128x128.h  53_128x128.h  55_128x128.h  56_128x128.h  57_128x128.h  61_128x128.h  63_128x128.h  65_128x128.h  66_128x128.h  67_128x128.h  71_128x128.h  73_128x128.h  75_128x128.h  77_128x128.h  80_128x128.h  81_128x128.h  82_128x128.h  95_128x128.h  96_128x128.h  99_128x128.h
components/screen/include/generic_icons/: qr_code.h
components/server/: CMakeLists.txt  calendar.c  esp_server.c  oauth2.c  server.c  utils.c
components/server/include/: calendar.h  esp_server.h  jsmn.h  oauth2.h  server.h  server_utils.h
components/utils/: CMakeLists.txt  nvs_utils.c  spiffs_handler.c  utils.c  wifi.c
components/utils/include/: jsmn.h  nvs_utils.h  spiffs_handler.h  utils.h  wifi.h
main/: CMakeLists.txt  main.c  main.cpp
pcb/emit/: emit.kicad_prl  emit.kicad_pro
spiffs/: home.html
